Refactored day 12 to use lcm method from new Math class in library